addons/rook/ceph-dashboard-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - ceph.squirrel.loutre.tel
      secretName: ceph-tls
  rules:
  - host: ceph.squirrel.loutre.tel
    http:
      paths:
      - backend:
          service:
            name: rook-ceph-mgr-dashboard
            port:
              name: http-dashboard
        path: /
        pathType: Prefix
